--- a/REACT-VICTORIACALVO/src/estilos/header.scss
+++ b/REACT-VICTORIACALVO/src/estilos/header.scss
@@ -1,7 +1,24 @@
-.navbar-brand {
-    font-size: 1.3rem;
+.navbar_brand {
+    font-size: 2rem;
+    margin-right: 40px;
+    color: black;
+    text-decoration: none;
+
+    :hover {
+        color: black;
+    }
+
 }
 
-.nav-link {
-    font-size: 0.8rem;
+.nav_link {
+    font-size: 1.2rem;
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+
+    
+    :hover {
+        color: black;
+    }
+
 }
