--- a/REACT-VICTORIACALVO/src/estilos/itemListContainer.scss
+++ b/REACT-VICTORIACALVO/src/estilos/itemListContainer.scss
@@ -1,15 +1,4 @@
-.card-body {
-
-    .card-title {
-        font-size: 1rem;
-
-    }
+h3 {
+    font-size: 1.4rem !important;
 }
-
-p {
-
-    font-size: 0.8rem;
-    
-}
-
 
