--- a/REACT-VICTORIACALVO/src/estilos/header.scss
+++ b/REACT-VICTORIACALVO/src/estilos/header.scss
@@ -3,11 +3,6 @@
     margin-right: 40px;
     color: black;
     text-decoration: none;
-
-    :hover {
-        color: black;
-    }
-
 }
 
 .nav_link {
@@ -15,10 +10,10 @@
     color: black;
     text-decoration: none;
     padding: 10px;
+}
 
-    
+.navbar {
     :hover {
         color: black;
     }
-
 }
