primera parte del carrito

--- a/REACT-VICTORIACALVO/src/estilos/btn.css
+++ b/REACT-VICTORIACALVO/src/estilos/btn.css
@@ -2,4 +2,10 @@
   background-color: black;
   border: none;
   color: white;
+}
+
+.btn_cont {
+  background-color: white;
+  border: none;
+  color: black;
 }/*# sourceMappingURL=btn.css.map */
