--- a/REACT-VICTORIACALVO/src/estilos/btn.scss
+++ b/REACT-VICTORIACALVO/src/estilos/btn.scss
@@ -1,6 +1,12 @@
+.btn {
+    background-color: black;
+    border: none;
+    color: white;
+}
 
-    .btn {
-        background-color: black;
-        border: none;
-        color: white;
+.btn_cont {
+
+    background-color: white;
+    border: none;
+    color: black;
 }
